--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a {
 
 .topic {
     width: 100%;
-    height: 24.5vh;
+    height: 20vh;
     position: relative;
     overflow: hidden;
     text-align: center;
@@ -90,24 +90,40 @@ a {
     background: rgb(201, 161, 30);
 }
 
-.content {
+.content_1 {
     padding-left: 400px;
+    padding-bottom: 30px;
 }
 
-.content h3 {
-    padding-bottom: 25px;
+.content_1 h3 {
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
-.content p {
-    padding-top: 20px;
-    padding-left: 350px
+.content_1 p {
+    padding-top: 15px;
+    padding-left: 350px;
+    padding-right: 400px;
+    font-size: 20px;
+}
+
+.content_2 {
+    padding-right: 400px;
+    padding-bottom: 30px;
+}
+
+.content_2 p {
+    padding-top: 15px;
+    padding-left: 400px;
+    padding-right: 375px;
+    font-size: 20px;
 }
 
 h2 {
     background-color: rgb(201, 161, 30);
     background-color: rgb(201, 161, 30);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding-top: 65px;
+    padding-top: 50px;
     padding-bottom: 25px;
     text-align: center;
 }
@@ -115,12 +131,13 @@ h2 {
 h3 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 45px;
+    color: white;
     padding-top: 65px;
     padding-bottom: 25px;
 }
 
 img {
-    border: 8px solid rgb(66, 2, 78);
+    border: 8px solid rgb(201, 161, 30);
     border-radius: 8px;
 }
 
@@ -129,7 +146,7 @@ p {
     font-size: 25px;
     line-height: 3vh;
     padding-left: 400px;
-    padding-right: 400px;
+    color: white;
 }
 
 @media (max-width: 955px) {
