--- a/style.css
+++ b/style.css
@@ -119,6 +119,19 @@ a {
     font-size: 20px;
 }
 
+.contact {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 15px 300px 0 300px;
+    text-align: center;
+}
+
+.contact img {
+    margin: 10px;
+    display: block;
+}
+
 h2 {
     background-color: rgb(201, 161, 30);
     background-color: rgb(201, 161, 30);
