--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a {
 }
 
 .content_1 {
-    padding-left: 400px;
+    padding-left: 20%;
     padding-bottom: 30px;
 }
 
@@ -102,21 +102,21 @@ a {
 
 .content_1 p {
     padding-top: 15px;
-    padding-left: 350px;
-    padding-right: 400px;
-    font-size: 20px;
+    padding-left: 25%;
+    padding-right: 20%;
+    font-size: 100%;
 }
 
 .content_2 {
-    padding-right: 400px;
+    padding-right: 17%;
     padding-bottom: 30px;
 }
 
 .content_2 p {
     padding-top: 15px;
-    padding-left: 400px;
-    padding-right: 375px;
-    font-size: 20px;
+    padding-left: 24%;
+    padding-right: 25%;
+    font-size: 100%;
 }
 
 .contact {
@@ -128,15 +128,14 @@ a {
 }
 
 .contact img {
-    margin: 10px;
+    margin: 10%;
     display: block;
 }
 
 h2 {
     background-color: rgb(201, 161, 30);
-    background-color: rgb(201, 161, 30);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding-top: 50px;
+    padding-top: 10px;
     padding-bottom: 25px;
     text-align: center;
 }
@@ -193,6 +192,10 @@ p {
     a {
         width: 25%;
         text-align: center;
+    }
+
+    .contact img {
+        width: 100%
     }
 }
 
