--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a {
 
 .topic {
     width: 100%;
-    height: 20vh;
+    height: 12%;
     position: relative;
     overflow: hidden;
     text-align: center;
@@ -92,7 +92,7 @@ a {
 
 .content_1 {
     padding-left: 20%;
-    padding-bottom: 30px;
+    padding-bottom: 5%;
 }
 
 .content_1 h3 {
@@ -104,7 +104,7 @@ a {
     padding-top: 15px;
     padding-left: 25%;
     padding-right: 20%;
-    font-size: 100%;
+    font-size: 130%;
 }
 
 .content_2 {
@@ -116,7 +116,7 @@ a {
     padding-top: 15px;
     padding-left: 24%;
     padding-right: 25%;
-    font-size: 100%;
+    font-size: 130%;
 }
 
 .contact {
@@ -135,9 +135,10 @@ a {
 h2 {
     background-color: rgb(201, 161, 30);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding-top: 10px;
-    padding-bottom: 25px;
+    padding-top: 1%;
+    padding-bottom: 1%;
     text-align: center;
+    font-size: 100%;
 }
 
 h3 {
